<resources>
    <string name="app_name">AltisSocket</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="ip_address">AltisSocket.ip_address</string>
    <string name="port_input">AltisSocket.port_input</string>
    <string name="port_device">AltisSocket.port_device</string>
    <string name="p2l_ip">P2L Gateway IP Address: </string>
    <string name="p2l_port">P2L Gateway Port: </string>
    <string name="ip_address_hint">IP Address</string>
    <string name="save">Save</string>
    <string name="device_port">Device Port:</string>
    <string name="device_port_title">Device Port</string>

</resources>