<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/grid"
        android:columnCount="1"
        android:rowCount="4">

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2l_ip"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/ipAddress"
                android:layout_width="156dp"
                android:layout_height="42dp"
                android:ems="20"
                android:hint="@string/ip_address_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p2l_port"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/PortLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/port"
                android:layout_width="104dp"
                android:layout_height="42dp"
                android:ems="20"
                android:hint="Port" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_port_title"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/device_port"
                android:layout_width="104dp"
                android:layout_height="42dp"
                android:ems="20"
                android:hint="Port" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

    </GridLayout>

    <Button
        android:id="@+id/save_prenferences"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginTop="55dp"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/grid"/>

</RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>